<resources>
    <string name="app_name">Messenger</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="hoat_dong_5_phut_truoc">Hoat dong 5 phut truoc</string>
    <string name="tu_meo">Tu Meo</string>
    <string name="write_something">Write something</string>
    <string name="ang_ho_t_ng">Đang hoạt động</string>
</resources>
