<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailChat"
    android:orientation="vertical"
    android:weightSum="30"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/appColor"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ContactImage"
            android:layout_marginLeft="10dp"
            android:layout_alignParentStart="true"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/abc"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/ContactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ContactImage"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/tu_meo"
            >
        </TextView>
        <TextView
            android:id="@+id/TimeActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ContactImage"
            android:layout_below="@id/ContactName"
            android:text="@string/ang_ho_t_ng"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
        </TextView>
    </RelativeLayout>
    <ListView
        android:id="@+id/list_Message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:layout_weight="25"
        >
    </ListView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        >
<!--        <ImageButton-->
<!--            android:id="@+id/btn_SendMessage"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:background="@drawable/icon_send"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:layout_marginRight="10dp"-->
<!--            -->
<!--            >-->
<!--        </ImageButton>-->
        <Button
            android:id="@+id/btn_SendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            app:icon="@drawable/icon_send"
            style="@style/Widget.App.Button.IconOnly"
        />

        <EditText
            android:id="@+id/txt_message"
            android:minLines="2"
            android:maxLines="3"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/btn_SendMessage"
            android:background="#F1F1F1"
            android:textSize="20dp"
            android:hint="@string/write_something"
            android:layout_margin="10dp"
            />
    </RelativeLayout>


</LinearLayout>